# DART

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
AblationStudy/: ablation_study.py
AblationStudy/1/: ablation_config.json  ablation_history_all.csv  ablation_mean_curve.csv  ablation_summary_mean.csv  ablation_summary_per_seed.csv
CFDVerification/ma0.3/: cl_ma0.3_free.csv  cl_ma0.3_tunnel.csv  highdataused.csv  prediction_result.csv
CFDVerification/ma0.4/: cl_ma0.4_free.csv  cl_ma0.4_tunnel.csv  highdataused.csv  prediction_result.csv
CFDVerification/ma0.5/: cl_ma0.5_free.csv  cl_ma0.5_tunnel.csv  highdataused.csv  prediction_result.csv
CFDVerification/ma0.6/: cl_ma0.6_free.csv  cl_ma0.6_tunnel.csv  highdataused.csv  prediction_result.csv
ConvergenceVerification/: convergence_verification.py  iteration_mae.csv  mean_curve.csv  run_config.json
DART/: base.py  fusion.py  fusion_gui.py  initialization.py  kriging.py  main.py  optimizer.py  predict_and_plot_from_pkl.py  sequential.py  strategy.py  visualization.py
FunctionExperiment/: highdata.csv  highdataused.csv  lowdata.csv  prediction_result.csv
WindTunnelData/Tunnel2d/: tunnel2d_global_best_fes.json
scripts/batch/: run_ma03_cl_fes_sweep.py  run_tunnel_1d_batch.py  run_tunnel_2d_batch.py
scripts/data_processing/: process_wind_tunnel_data.py
scripts/one_dimensional/: predict_from_trained_model.py  run_dart_experiment.py  run_dart_final.py  run_dart_pipeline.py  run_extended_hyperparameter_search.py
src/dart/: __init__.py  base.py  fusion.py  fusion_gui.py  kriging.py  (+7 more)
(+522 files in other folders)
